--- a/_posts/2023-12-31-2023-year-in-review/2023-year-in-review.Rmd
+++ b/_posts/2023-12-31-2023-year-in-review/2023-year-in-review.Rmd
@@ -22,15 +22,23 @@ editor_options:
 preview: preview.png
 ---
 
+```{r}
+#| echo: false
+#| fig.cap: New year's eve celebration fireworks at Long Beach, CA.
+#| fig.align: center
+#| out.width: 70%
+knitr::include_graphics("preview.png")
+```
+
 ## Intro
 
-I've been seeing a [couple](https://www.pipinghotdata.com/posts/2023-12-18-2023-year-in-review/) [folks](https://yabellini.netlify.app/blog/2023-12-23-year-review/) on Mastodon sharing their "year in review" blog posts, and I thought that was really cool, so I decided to write my own too! I'm mostly documenting for myself but hopefully this also serves as an update of a sort for my internet friends since I've been pretty silent online this year.
+I've been seeing a [couple](https://www.pipinghotdata.com/posts/2023-12-18-2023-year-in-review/) [folks](https://yabellini.netlify.app/blog/2023-12-23-year-review/) on Mastodon sharing their "year in review" blog posts, and I thought that was really cool, so I decided to write my own too! I'm mostly documenting for myself but hopefully this also serves as an update of a sort for my friends over the internet since I've been pretty silent online this year.
 
 ## Research
 
-Being the good grad student I am, I'm forefronting my academia happenings first. In numbers, I published **one paper**, gave **two talks**, and presented **three posters**. I'm not super proud of those numbers: I think they're a lot less than what people might expect from a 4th year PhD student. But a lot of effort went into each^[I was the first author for all research that I presented, as is often the case in linguistics.] and 2023 overall has been a great year for refining and narrowing down on my dissertation topic. I did a ton of readings and I hope it pays off for next year when I actually get started on writing the thing.
+Being the Good Grad Student™ I am, I'm forefronting my academia happenings first. In numbers, I published **one paper**, gave **two talks**, and presented **three posters**. I'm not super proud of those numbers: I think they're a lot less than what people might expect from a 4th year PhD student. But a lot of effort went into each^[I was the first author for all research that I presented, as is often the case in linguistics.] and 2023 overall has been a great year for refining and narrowing down on my dissertation topic.^[Broadly, how kids learn words with overlapping meanings like "dalmatian"<"dog"<"animal" from the language input.] I did a ton of readings and I hope it pays off for next year when I actually get started on writing the thing.
 
-I already document my research happenings [elsewhere](https://yjunechoe.github.io/research.html) and I know that my primarily audience isn't linguists, so I won't expand on that more here.
+I already document my research happenings [elsewhere](https://yjunechoe.github.io/research.html) and I know that the primarily audience of my blog isn't linguists, so I won't expand on that more here.
 
 ## Blogging
 
@@ -46,13 +54,21 @@ I didn't think I'd have much to say about the R stuff I did this year until I sa
 
 <img src="https://yjunechoe.github.io/ggtrace/logo.png" style="width:20%;margin:1em auto;display:block;">
 
-At the beginning of the year, I was really lucky to receive the [student paper award](https://community.amstat.org/jointscsg-section/awards/student-paper-competition) from the [Statistical Computing and Graphics section of the ASA](https://community.amstat.org/jointscsg-section/home), writing about [{ggtrace}](https://yjunechoe.github.io/ggtrace/).^[Coincidentally, my girlfriend also won a student award this year from another ASA - the Acoustical Society of America.] In the [paper](https://yjunechoe.github.io/static/papers/Choe_2022_SublayerGG.pdf), I focused on `{ggtrace}` as a pedagogical tool for aspiring `{ggplot2}` extension developers. In the process, I rediscovered the power of **reframing ggplot internals as data wrangling** and went back to `{ggtrace}` to add a couple [convenience functions](https://yjunechoe.github.io/ggtrace/news/index.html#ggtrace-development-version-3) for interactive use-cases. After over two years since its inception, `{ggtrace}` now feels pretty complete in terms of its core features.
+At the beginning of the year, I was really lucky to receive the [student paper award](https://community.amstat.org/jointscsg-section/awards/student-paper-competition) from the [Statistical Computing and Graphics section of the ASA](https://community.amstat.org/jointscsg-section/home), writing about [{ggtrace}](https://yjunechoe.github.io/ggtrace/).^[Coincidentally, my girlfriend also won a student award this year from another ASA - the Acoustical Society of America.] In the [paper](https://yjunechoe.github.io/static/papers/Choe_2022_SublayerGG.pdf), I focused on `{ggtrace}` as a pedagogical tool for aspiring `{ggplot2}` extension developers. In the process, I rediscovered the power of **reframing ggplot internals as data wrangling** and went back to `{ggtrace}` to add a couple [convenience functions](https://yjunechoe.github.io/ggtrace/news/index.html#ggtrace-development-version-3) for interactive use-cases. After over two years since its inception, `{ggtrace}` now feels pretty complete in terms of its core features (but suggestions and requests are always welcome!).
 
 <img src="https://yjunechoe.github.io/jlmerclusterperm/logo.png" style="width:20%;margin:1em auto;display:block;">
 
 In Spring, I began writing [{jlmerclusterperm}](https://yjunechoe.github.io/jlmerclusterperm/), a statistical package implementing the cluster-based permutation test for time series data, using mixed-effects models. This was a new challenge for me for two reasons. First, I wrote much of the package [in Julia](https://github.com/yjunechoe/jlmerclusterperm/tree/main/inst/julia/JlmerClusterPerm/src) - this was my first time writing Julia code for "production" and within an R package.^[I can't recommend `{JuliaConnectoR}` enough for this.] Second, I wrote this package for a seminar on eye movements that I was taking that Spring in the psychology department. I wrote `{jlmerclusterperm}` in an intense burst - most of it was complete by the end of May and I turned in the package as my final.^[I'm actually quite proud of myself for pulling this off - writing an R package for the final was unprecedented for the class.] I also gave a school-internal [talk](https://mindcore.sas.upenn.edu/calendar_event/ilst-seminar-students/) on it in April; my first time talking about R in front of an entirely academic audience.
 
 In Summer, I continued polishing `{jlmerclusterperm}` with another ambitious goal of getting it to CRAN, at the suggestion of a couple researchers who said they'd like to use it for their own research. The already-hard task of getting through **my first CRAN submission** was compounded by the fact that the package contained Julia code - it took *nine resubmissions in the span of two months* to finally get `{jlmerclusterperm}` stably on CRAN.^[In the process, I received the elusive CRAN Note for exceeding 6 updates in under a month (CRAN recommends one update every 1-2 months).]
+
+```{r}
+#| echo: false
+#| fig.cap: Group photo taken at SMLP2023.
+#| fig.align: center
+#| out.width: 60%
+knitr::include_graphics("https://vasishth.github.io/smlp2023/images/smlp2023photo.jpeg")
+```
 
 At the beginning of Fall, I attended the [Advanced Frequentist stream](https://repsychling.github.io/SMLP2023/) of the [SMLP2023](https://vasishth.github.io/smlp2023/) workshop, taught by Phillip Alday, Reinhold Kliegl and Douglas Bates. The topic was **mixed-effects regression models in Julia**, one that I became very excited about especially after working on `{jlmerclusterperm}`. It was an absolute blast and I wish that everyone in linguistics/psychology research appreciated good stats/data analysis as much as the folks I met there. The workshop was far away in Germany (my first time ever in Europe!) and I'm really thankful to [MindCORE](https://mindcore.sas.upenn.edu/) for giving me a grant to help with travel expenses.
 
@@ -64,12 +80,12 @@ For most of Fall, I didn't do much R stuff, especially with the start of the Fal
 
 In October, I virtually attended the [R/Pharma conference](https://rinpharma.com/) and joined a [workshop](https://github.com/rich-iannone/pointblank-workshop) on data validation using the `{pointblank}` package by [Rich Iannone](https://github.com/rich-iannone). I had used `{pointblank}` a little before, but I didn't explore its features much because I thought it had some odd behaviors that I couldn't comprehend. The workshop cleared up some of the confusion for me, and Rich made it clear in the workshop that he welcomed contributions to improve the package. So I [made a PR](https://github.com/rstudio/pointblank/pull/493) addressing the biggest pain point I personally had with using `{pointblank}`. This turned out to be a pretty big undertaking which took over a month to complete. In the process, I become a co-author of `{pointblank}`, and I merged a series of PRs that improved the consistency of function designs, among other things.
 
-The last R thing I did this year was actually secretly Julia - in December I gave a school-internal [workshop](https://github.com/yjunechoe/MindCORE-julia-mixedmodels) on fitting mixed effects in Julia, geared towards an academic audience with experience in R. I advocated for a middle-ground approach where you can keep doing everything in R and RStudio, except move the modelling workflow into Julia. I live-coded some Julia code and ran it from RStudio^[Using some tricks described in the workshop materials.] which I think wasn't too difficult to grasp. I have a half-baked package of addins to make R-Julia interoperability smoother in RStudio; this might become my next full project.
+The last R thing I did this year was actually secretly Julia - in December I gave a school-internal [workshop](https://github.com/yjunechoe/MindCORE-julia-mixedmodels) on fitting mixed effects in Julia, geared towards an academic audience with prior experience in R. I advocated for a middle-ground approach where you can keep doing everything in R and RStudio, except move just the modelling workflow into Julia. I live-coded some Julia code and ran it from RStudio, which I think wasn't too difficult to grasp.^[Using some tricks described in the workshop materials.] I have a half-baked package of addins to make R-Julia interoperability smoother in RStudio; I hope to wrap it up and share it some day.
 
 That brings me to the present moment, where I'm currently taking a break from FOSS to focus on my research, as my dissertation proposal defense is coming up soon. I will continue to be responsive with maintaining `{jlmerclusterperm}` during this time (since there's an active user-base of researchers who find it useful) but my other projects will become low priority. I also don't think I'll be starting a new project any time soon, but in the near future I hope I come up with something cool that lets me test-drive `{S7}`!
 
 ## Personal
 
-This year, I tried to be less of a workaholic. I think I did an okay job at it, and it came in the form of diversifying my hobbies (R used to be my only hobby since starting grad school). I got back into ice skating^[I used to play ice hockey competitively as a kid.] and, briefly, swimming,^[Turns out that swimming does not play well with my preexisting ear conditions.] and I'm fortunate that both are available literally two blocks away from my department. My girlfriend and I got really into escape rooms this year, mostly playing online ones due to budget constraints.^[Most recently we played [Hallows Hill](https://wolfescapegames.com/en-us/products/hallows-hill-the-virtual-escape-room-experience) which I think is the best one we've played so far] I also got back into playing Steam games and racked up over 300 hours on [Slay the Spire](https://store.steampowered.com/app/646570/Slay_the_Spire/), mostly from the ~2 weeks recovering from covid in September.^[For the fellow nerds, I reached A20 on Ironclad, Defect, and Watcher. I'm working my way up for Silent.]
+This year, I tried to be less of a workaholic. I think I did an okay job at it, and it mostly came in the form of diversifying my hobbies (R used to be my only hobby since starting grad school). I got back into ice skating^[I used to play ice hockey competitively as a kid.] and, briefly, swimming,^[Turns out that swimming does not play well with my preexisting ear conditions.] and I'm fortunate that both are available literally two blocks away from my department. My girlfriend and I got really into escape rooms this year, mostly playing online ones due to budget constraints.^[Most recently we played [Hallows Hill](https://wolfescapegames.com/en-us/products/hallows-hill-the-virtual-escape-room-experience) which I think is the best one we've played so far] I also got back into playing Steam games^[I'm very into roguelike genres but haven't really played video games since high school.] and racked up over 300 hours on [Slay the Spire](https://store.steampowered.com/app/646570/Slay_the_Spire/), mostly from the ~2 weeks recovering from covid in September.^[For the fellow nerds, I reached A20 on Ironclad, Defect, and Watcher. I'm working my way up for Silent.]
 
 And of course, I have many people to thank for making this a wonderful year.^[I'm feeling shy so this goes in the footnotes. In roughly chronological order, I'm firstly indebted to Sam Tyner-Monroe who encouraged me write up `{ggtrace}` for the ASA paper award after my rstudio::conf talk on it last year. I'm grateful to Gina Reynolds and Teun van den Brand (and others in the [ggplot extension club](https://github.com/teunbrand/ggplot-extension-club)) for engaging in many insightful data viz/ggplot internals discussions with me. I'm also grateful to my FOSS collaborators, especially Trang Le, from whom I've learned a lot about code review and package design principles while working on `{openalexR}` together. Last but not least, I owe a lot to Daniel Sjoberg and Shannon Pileggi for a recent development that I'm not ready to publicly share yet 🤫.] Happy new year to all!
