--- a/software.Rmd
+++ b/software.Rmd
@@ -47,6 +47,20 @@ Links: [CRAN](https://cran.r-project.org/package=jlmerclusterperm), [Github](htt
 
 > An implementation of fast cluster-based permutation analysis (CPA) for densely-sampled time data developed in [Maris & Oostenveld (2007)](doi:10.1016/j.jneumeth.2007.03.024). Supports (generalized, mixed-effects) regression models for the calculation of timewise statistics. Provides both a wholesale and a piecemeal interface to the CPA procedure with an emphasis on interpretability and diagnostics. Integrates Julia libraries MixedModels.jl and GLM.jl for performance improvements, with additional functionalities for interfacing with Julia from 'R' powered by the JuliaConnectoR package.
 
+## pointblank
+
+<div class='hex-container'>
+  <img class='hex' src='https://raw.githubusercontent.com/rstudio/pointblank/main/man/figures/logo.svg'/>
+</div>
+
+Role: Author
+
+Language: R, HTML/CSS, Javascript
+
+Links: [Github](https://github.com/rstudio/pointblank), [website](https://rstudio.github.io/pointblank/)
+
+> Data quality assessment and metadata reporting for data frames and database tables
+
 
 ## openalexR
 
